@@ -1,5 +1,11 @@
 2014-02-10  Corinna Vinschen  <corinna@vinschen.de>
 
+	* cygheap.cc (cwcsdup): Change parameter to correct PWCSTR.
+	(cwcsdup1): Ditto.
+	* cygheap_malloc.h: Change declarations accordingly.
+
+2014-02-10  Corinna Vinschen  <corinna@vinschen.de>
+
 	* uinfo.cc (pwdgrp::fetch_account_from_windows): Add code to allow
 	setting the primary group from the SAM comment field.
 
